added all assets to the canvas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Canvas Crawler</title>
+  <title>Sai's Maze Game</title>
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -26,8 +26,9 @@
     <ul>
         <li>⚠️: Triforce Pieces help you through places with a lot of dark presence.</li>
         <li>💣: Bombs allow you to explode your way into places that were previously blocked by giant boulders.</li>
-        <li>🧂: Goron Rock Salt is mined straight from the caverns of Death Mountain, it's great for cooking.</li>
+        <li>🧂: Goron Spice is mined straight from the caverns of Death Mountain, it's great for cooking.</li>
         <li>🪣: Zora Spring Water is the cleanest water in Hyrule, it's very refreshing and rejuvinating.</li>
+        <li>📯: The Fairy Ocarina is a flute-like instrument that's really popular with forest folk.</li>
     </ul>
     <h3>Enemies/Entities Guide:</h3>
     <ul>
